--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "enyo/dropzone": "^5.9",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "kreait/firebase-php": "5.0",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.6",
